src/objects/geopointe__GP_Device_Daily_Summary__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Date__c</fullName>
        <inlineHelpText>The date this summary is for.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__Device__c</fullName>
        <label>Device</label>
        <referenceTo>geopointe__GP_Device__c</referenceTo>
        <relationshipLabel>Geopointe Device Daily Summaries</relationshipLabel>
        <relationshipName>Geopointe_Device_Daily_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>geopointe__End_City__c</fullName>
        <label>End City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Country__c</fullName>
        <label>End Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__End_County__c</fullName>
        <label>End County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Cross_Street__c</fullName>
        <label>End Cross Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Datetime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Location__c</fullName>
        <label>End Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Postal_Code__c</fullName>
        <label>End Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__End_State__c</fullName>
        <label>End State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Street__c</fullName>
        <label>End Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Engine_On_Time_Min__c</fullName>
        <inlineHelpText>The total amount of time the engine was on. Set to -1 if unknown.</inlineHelpText>
        <label>Engine On Time (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Final_Odometer_Mi__c</fullName>
        <label>Final Odometer (mi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Fuel_Economy_MPG__c</fullName>
        <label>Fuel Economy (MPG)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Fuel_Use_Gal__c</fullName>
        <label>Fuel Use (gal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Fuel_Use_Idling_Gal__c</fullName>
        <label>Fuel Use During Idles (gal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Idle_Duration_Min__c</fullName>
        <label>Long Idle Duration (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Max_Idle_Duration_Min__c</fullName>
        <label>Longest Idle Duration (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Max_Speed_MPH__c</fullName>
        <label>Max Speed (mph)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Max_Speed_Overage_MPH__c</fullName>
        <inlineHelpText>The maximimum amount by which the device exceeded the speed limit</inlineHelpText>
        <label>Max Speed Limit Overage (mph)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_COLL__c</fullName>
        <label># Events - Collision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_CONN__c</fullName>
        <label># Events - Device Connected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_DISCON__c</fullName>
        <label># Events - Device Disconnect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_HDACC__c</fullName>
        <label># Events - Hard Acceleration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_HDDEC__c</fullName>
        <label># Events - Hard Brake</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_HDLFT__c</fullName>
        <label># Events - Hard Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_HDRGT__c</fullName>
        <label># Events - Hard Right</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_IDLE__c</fullName>
        <label># Events - Long Idle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_IGOFF__c</fullName>
        <label># Events - Ignition Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_IGON__c</fullName>
        <label># Events - Ignition On</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_STARTTOW__c</fullName>
        <label># Events - Start Movement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Event_STOPTOW__c</fullName>
        <label># Events - Stop Movement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Num_Harsh_Events__c</fullName>
        <formula>geopointe__Num_Event_HDACC__c + geopointe__Num_Event_HDDEC__c + geopointe__Num_Event_HDLFT__c + geopointe__Num_Event_HDRGT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Harsh Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Speeding_Duration_Min__c</fullName>
        <inlineHelpText>The total amount of time the device was traveling above the speed limit. Set to -1 if unknown.</inlineHelpText>
        <label>Speeding Duration (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_City__c</fullName>
        <label>Start City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Country__c</fullName>
        <label>Start Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_County__c</fullName>
        <label>Start County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Cross_Street__c</fullName>
        <label>Start Cross Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Datetime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Location__c</fullName>
        <label>Start Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Postal_Code__c</fullName>
        <label>Start Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_State__c</fullName>
        <label>Start State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Street__c</fullName>
        <label>Start Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Mileage_Mi__c</fullName>
        <label>Total Mileage (mi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Geopointe_Device_Daily_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geopointe Device Daily Summary</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>geopointe__User__c</columns>
        <columns>geopointe__Total_Mileage_Mi__c</columns>
        <columns>geopointe__Engine_On_Time_Min__c</columns>
        <columns>geopointe__Fuel_Economy_MPG__c</columns>
        <columns>geopointe__End_City__c</columns>
        <columns>geopointe__Num_Harsh_Events__c</columns>
        <columns>geopointe__Max_Speed_Overage_MPH__c</columns>
        <columns>geopointe__Speeding_Duration_Min__c</columns>
        <columns>geopointe__Idle_Duration_Min__c</columns>
        <columns>geopointe__Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Daily Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Device Daily Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>